<resources>
    <string name="app_name">SayHi</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_now">Login now</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">05:45 pm</string>
    <string name="one">1</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="message">Message..</string>
    <string name="downloading_photo">Downloading photo</string>
    <string name="online">online</string>
</resources>