<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/chatImgCV"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chatProfileName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/chatProfileImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_profile_male_avatar"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/chatProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/chatImgCV"
        app:layout_constraintEnd_toStartOf="@id/chatLastTime"
        app:layout_constraintTop_toTopOf="@id/chatImgCV"
        app:layout_constraintBottom_toTopOf="@id/chatLastMessage"/>
    <TextView
        android:id="@+id/chatLastTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/chatProfileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chatProfileName"
        app:layout_constraintBottom_toBottomOf="@id/chatProfileName"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/chatLastMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="14sp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/chatProfileName"
        app:layout_constraintEnd_toStartOf="@id/chatUnreadMessageCV"
        app:layout_constraintTop_toBottomOf="@id/chatProfileName"
        app:layout_constraintBottom_toBottomOf="@id/chatImgCV"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/chatUnreadMessageCV"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/green"
        app:layout_constraintStart_toEndOf="@id/chatLastMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chatLastMessage"
        app:layout_constraintBottom_toBottomOf="@id/chatLastMessage"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/chatUnreadMessageCount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/one"
            android:textSize="14sp"
            android:textAlignment="center"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>